Add code to merge institutions